# copyboard

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  README.md  README_zh.md  clipsync.spec  copyboard.spec  main.py  pyproject.toml  requirements.txt  run.bat
.github/workflows/: build.yml  test.yml
cmd/: main.py
docs/: index.html  index_zh.html
internal/clipboard/: clipboard.py  clipboard_darwin.py  clipboard_linux.py  clipboard_windows.py  filter.py  format.py  history.py  platform.py
internal/config/: config.py
internal/i18n/: __init__.py
internal/platform/: __init__.py  autostart.py  notify.py
internal/protocol/: __init__.py  codec.py
internal/security/: __init__.py  encryption.py  pairing.py
internal/sync/: file_transfer.py  manager.py
internal/transport/: connection.py  discovery.py
internal/ui/: dashboard.py  dialogs.py  settings_window.py  systray.py
internal/web/: __init__.py  server.py
src/: main.py
tests/: test_clipboard_sim.py  test_codec.py  test_config.py  test_connection.py  test_cross_platform_integration.py  test_file_transfer.py  test_format.py  test_pairing.py  test_sync_manager.py
