[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clipsync"
version = "1.0.1"
description = "Cross-platform clipboard sharing over LAN"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "kai3316" }]
keywords = ["clipboard", "sync", "lan", "cross-platform"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

dependencies = [
    "zeroconf>=0.132.0",
    "cryptography>=42.0.0",
    "Pillow>=10.0.0",
    "pystray>=0.19.0",
    "customtkinter>=5.2.0",
    "qrcode>=7.4",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pyinstaller>=6.0",
]

[project.scripts]
clipsync = "src.main:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60
addopts = "-v --tb=short"
